--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "next": "latest",
     "react": "18.1.0",
+    "react-canvas-confetti": "^1.3.0",
     "react-dom": "18.1.0"
   },
   "devDependencies": {
